--- a/style.css
+++ b/style.css
@@ -28,8 +28,23 @@ header{
     max-width: 1200px;
     margin: 20px auto;
     gap: 60px;
+    grid-template-areas: "featured featured featured";
 }
-.img{
-    width: 600px;
-    height: 400px;
+article.featured{
+    grid-area: featured;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 60px;
+    align-items: center;
+    border-bottom: 1px solid #bbc7c7;
+    padding-bottom: 60px;
+}
+ .img{
+    width: 100%;
+    border: 4px solid #fff;
+    border-radius: 10px;
+}
+article p, article h2{
+    margin: 20px 10px;
+
 }
